add: service layer, feign cleint, tests, README.md